# match-report-analyzer

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README.md
src/: cli.rs  error.rs  lib.rs  main.rs  query.rs  report.rs  store.rs  xlsx.rs
tests/: load_sample.rs
